# BTB

./: .buildinfo  .flake8  .gitignore  .isort.cfg  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  api_reference.html  authors.html  benchmark.html  btb.html  btb.recommendation.html  btb.selection.html  btb.tuning.html  contributing.html  genindex.html  history.html  index.html  install.html  installation.html  kubernetes.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  recommenders.html  release.md  requirements-dev.txt  requirements.txt  requirements_dev.txt  requirements_test.txt  search.html  searchindex.js  (+6 more)
.github/: ISSUE_TEMPLATE.md
_modules/: index.html
_sources/: benchmark.rst.txt  btb.recommendation.rst.txt  btb.selection.rst.txt  index.rst.txt  usage.rst.txt
_static/: documentation_options.js
api/: btb.benchmark.challenges.atmchallenge.html  btb.benchmark.challenges.bohachevsky.html  btb.benchmark.challenges.boston.html  btb.benchmark.challenges.branin.html  btb.benchmark.challenges.census.html  btb.benchmark.challenges.challenge.html  btb.benchmark.challenges.html  btb.benchmark.challenges.rosenbrock.html  btb.benchmark.challenges.wind.html  btb.benchmark.html  btb.benchmark.tuners.btb.html  btb.benchmark.tuners.html  btb.benchmark.tuners.hyperopt.html  btb.html  btb.hyper_parameter.html  btb.recommendation.html  btb.recommendation.matrix_factorization.html  btb.recommendation.recommender.html  btb.recommendation.uniform.html  btb.selection.best.html  btb.selection.constants.html  btb.selection.custom_selector.html  btb.selection.hierarchical.html  btb.selection.html  btb.selection.pure.html  btb.selection.recent.html  btb.selection.selector.html  btb.selection.ucb1.html  btb.selection.uniform.html  btb.session.html  btb.tuning.acquisition.base.html  btb.tuning.acquisition.expected_improvement.html  btb.tuning.acquisition.html  btb.tuning.acquisition.predicted_score.html  btb.tuning.constants.html  btb.tuning.custom_tuner.html  btb.tuning.gcp.html  btb.tuning.gp.html  btb.tuning.html  btb.tuning.hyperparams.base.html  (+16 more)
baytune/: __init__.py  session.py
benchmark/: Dockerfile  KUBERNETES.md  README.md  compile_results.py  results_summary.xlsx  run_benchmark.py  setup.py
btb/: __init__.py  bandit.py  benchmark.py  hyper_parameter.py  session.py  util.py
docs/: Makefile  _path_setup.py  api_reference.rst  btb.recommendation.rst  btb.rst  btb.tuning.rst  conf.py  index.rst  install.rst  installation.rst  kubernetes.rst  make.bat  quickstart.rst  recommenders.md  selectors.md  tuners.md
examples/: examples_setup.py  random_forest.py  rosenbrock.py  selection_example.py
hyperselection/: bandit.py
notebooks/: BTBSession - Example.ipynb  Rosenbrock - Example.ipynb  Rosenbrock - new.ipynb  Rosenbrock.ipynb  Times Bechmark - New.ipynb  Times Bechmark.ipynb  Times Benchmark.ipynb  benchmark.ipynb  btbsession.ipynb
tests/: run_benchmark.py  test_benchmark.py  test_session.py  test_version.py
tutorials/: 00_Quickstart.html  00_Quickstart.ipynb  01_Tunable.ipynb  01_Tuning.html  01_Tuning.ipynb  02_Selection.html  02_Selection.ipynb  02_Tuners.ipynb  03_Selectors.ipynb  03_Session.html  03_Session.ipynb  04_Session.ipynb  (+1 more)
(+386 files in other folders)
