[project]
name = "baytune"
readme = "README.md"
description = "Bayesian Tuning and Bandits"
dynamic = ["version"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
]
authors = [
    {name="MIT Data to AI Lab", email="dailabmit@mit.edu"}
]
maintainers = [
    {name="MIT Data to AI Lab", email="dailabmit@mit.edu"}
]
keywords = ["data science", "machine learning", "hyperparameters", "tuning", "classification"]
license = {text = "MIT License"}
requires-python = ">=3.8,<4"
dependencies = [
    'copulas >= 0.3.2',
    'numpy >= 1.20.0',
    'scikit-learn >= 0.20.0',
    'scipy >= 1.2',
    'pandas >= 1',
    'tqdm >= 4.36.1',
]

[project.urls]
"Source Code"= "https://github.com/MLBazaar/BTB/"
"Issue Tracker" = "https://github.com/MLBazaar/BTB/issues"
"Twitter" = "https://twitter.com/lab_dai"

[project.optional-dependencies]
test = [
    "pytest >= 3.4.2",
    "pytest-cov >= 2.6.0",
    "pytest-rerunfailures >= 9.1.1",
    "jupyter >= 1.0.0",
    'importlib-metadata >= 0.12'
]
dev = [
    "ruff >= 0.0.260" ,
    "black[jupyter] >= 22.12.0",
    "pre-commit == 2.20.0",
]
docs = [
    'm2r >= 0.2.0',
    'nbsphinx >= 0.5.0',
    'Sphinx >= 1.7.1',
    'sphinx_rtd_theme >= 0.2.4',
]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools.package-data]
"*" = [
    "*.txt",
    "README.md",
    "Makefile",
]

[tool.setuptools.exclude-package-data]
"*" = [
    "* __pycache__",
    "*.py[co]",
]

[tool.setuptools.dynamic]
version = {attr = "baytune.version.__version__"}

[tool.pytest.ini_options]
testpaths = [
    "baytune/tests/*"
]

[tool.coverage.run]
source = ["baytune"]

[tool.coverage.report]
exclude_lines =[
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if self._verbose:",
    "if verbose:",
    "if profile:",
    "pytest.skip"
]

[build-system]
requires = [
    "setuptools >= 61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
# Never enforce `E501` (line length violations)
line-length = 88
ignore = ["E501"]
exclude = [
    "Examples",
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # flake8-quotes
    "Q",
    # isort
    "I001"
]
src = ["baytune"]

[tool.ruff.isort]
known-first-party = ["baytune"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402", "F403", "F405", "E501", "I001"]